welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: '(' expected but identifier found.
			if x<0 {
                           ^